-Function taxa2phylo apparently requires that taxa be ordered by FAD, with the root ancestor being listed first (probably reflecting bad coding practices of Dave circa 2011...)
	-Function taxa2phylo will now silently coerce a dataset (and input obs_time) so that taxa are ordered by FAD, before continuing
-Added tolerance argument to dateNodes to stop spurious warnings related to floating precision about native node dates that were barely distinguishable from zero
-Added new example dataset of macroperforate foram relationships and ages taken from Aze et al. 2011 for use in testing taxa2phylo and other related functions
-Added a tolerance argument to cal3timePaleoPhy to stop spurious warnings related to floating precision about terminal tip ages that were barely distinguishable from zero
-

Version - 2.4 - 05-01-15
-Modified timePaleoPhy help file to clarify 'these are not realistic time-scaling functions' statement and correcting an 'either' to 'neither' in the description of argument 'ntrees'
-Modified bin_timePaleoPhy and bin_cal3TimePaleoPhy to clarify that dateTreatment=minMax should be replaced be *either* the point.occur argument *or* a sites matrix
-Changed license from GPL ver 2 or higher to Creative Common zero, as I finally realized that CC0 is supported by CRAN (apparently I missed this change years ago)
-Added 'clade' option to collapseNodes to collapse *all* descendant edges of a selected node
-Added function testEdgeMat which is a simple checker of the $edge matrix of phylo objects for inconsistencies
-Added function taxonSortPBDBocc which sorts unique taxa out of PBDB occurrence datasets
-Added function occData2timeList which converts taxon-sorted occurrence data lists to the two-matrix timeList object useable by many other paleotree functions
-Added example data downloads from the Paleobiology Database of occurrence data and taxonomic data, available under 'graptPBDB'