@@ -10,9 +10,11 @@ Version - 2.5 -
 -Sweeping grandiose changes of how trees are created, cleaned, checked, etc with loads of tiny hidden functions. An unlikable yet necessary thing to implement.
 -Function taxa2phylo apparently requires that taxa be ordered by FAD, with the root ancestor being listed first (probably reflecting bad coding practices of Dave circa 2011...)
 	-Function taxa2phylo will now silently coerce a dataset (and input obs_time) so that taxa are ordered by FAD, before continuing
+	-Fixed small bug introduced by this, which mis-numbered ancestral taxa when passing to further parts of taxa2phylo (ugh)
 -Added tolerance argument to dateNodes to stop spurious warnings related to floating precision about native node dates that were barely distinguishable from zero
 -Added new example dataset of macroperforate foram relationships and ages taken from Aze et al. 2011 for use in testing taxa2phylo and other related functions
 -Added a tolerance argument to cal3timePaleoPhy to stop spurious warnings related to floating precision about terminal tip ages that were barely distinguishable from zero
+-Discovered broken while() loop in getUltimateAnc and testParentChild, added code to avoid infinite-running while loops
 -
 
 Version - 2.4 - 05-01-15
